WebContent/css/popup_newStyle.css
.asset
{
	/*padding:.75rem;*/
	text-align:center;
	
	transform:translateZ(100px);
	
	/*display:-webkit-flex;*/
	/*display:flex;*/
	justify-content:center;
	/*align-items:center;*/
		
	background: white;
	color:black;
	
	height: 24rem; /*for some reason if this is above 10.7rem (119px) it will be hidden by the space above the slider*/
	width: 16.5rem;
	
	/*margin-right:18px;*/
	margin-bottom:18px;
	/*border-radius: 1.5rem;*/
	border-width: 2px;
	border-color: #00b9de;
	border-style: solid;
	
	transition: all .4s .0s, width .4s .0s, height .4s .0s;
	
	font-size:1.8rem;
}

.asset.open
{
	transition: all .4s, width .4s, height .4s;
	z-index:10;
}

.asset.open > div.title
{
	text-align:center;
	/*margin-top: 1rem !important;*/
	transition: all .4s;
	font-size:2rem;
}

.assetSmallerParent
{
	
}

.assetSmallerParent.hidden
{
	height:0px !important;
	overflow:hidden;
}

.assetSmallererParent
{
	display:-webkit-flex;
	display:flex;
	/*flex-direction: row;*/
	/*justify-content:flex-start;*/
	flex-wrap:wrap;
	
	/*margin-left:3rem;*/
	
	transition: all .4s;
}

.assetParent > .title
{
	font-size:2.3rem;
	padding:.5rem;
	padding-left:0rem;
	border:0rem;
}

#assetsTitle
{
	color:grey;
	margin: 1rem;
	/*width:100%;*/
	font-size:1.45rem;
	
	/*display:-webkit-flex;*/
	display:flex;
	/*justify-content: space-around;*/
	text-align:left;
	
	margin-left:3.28rem;
	margin-bottom:1.64rem;
	margin-top:1.64rem;
}

/*
.assetParent:nth-child(odd)
{
	background:rgba(45,66,85,1);
	color:white;
}

.assetParent:nth-child(even)
{
	background:rgba(45,66,85,.1);
}
*/

.assetParent
{
	color:#3A3A3A;
	/*color:white;*/
	text-align:left;
	/*width:100%;*/
	padding-bottom:1rem;
	margin-left:3.28rem;
	margin-right:3.28rem;
	
	display:-webkit-flex;
	display:flex;
	flex-direction:column;
}

.assetParent > *
{
	margin-bottom:1.64rem;	
	/*margin-left:3.28rem;	
	margin-right:3.28rem;*/
}

.assetParent > hr
{
	/*padding:1px;*/
	/*margin:1.64rem;*/
	/*border: 0px;*/
	/*height: 1px;*/
	border-color:rgba(0,0,0,0);
	border-bottom-color:#525659;
	width:100%;
	
}

#assetsSlider.hidden
{
	height: 0rem !important;
}

#assetsSlider
{
	z-index:10;
	font-size:1rem !important;
	height: 0rem;
	width:100%;
	background-color:white;
	
	margin:0rem;
	padding:0rem;
	border:0rem;
	
	position:absolute;
	bottom:0rem;
	left:0rem;
	
	color:black;
	text-align:center;
		
	transition: all .4s;
	
	overflow-x:auto;
	
	transition: all .4s;
	
	/*display:-webkit-flex;*/
	/*display:flex;*/
	flex-direction: column;
	align-items: center;
}

#assetsSlider > *
{
	/*margin-bottom:1.64rem;*/
}

#xIcon
{
	width:2rem;
	height:2rem;	
	
	opacity: 1;
	
	z-index:11;
	position:absolute;
    transition: opacity .4s;
}
#xIcon.hidden
{
	opacity: 0;
    transition: all .0s;
}

.contentHolder
{
	overflow:hidden;
	
	opacity: 1;
	margin:2.5rem;
	
    transition: all .4s, height .4s, opacity .4s; /*the .2s is really nice with the .4*/
}
.contentHolder.hidden
{	
	opacity: 0;
	height:0rem;
    transition: all .4s, height .4s 0s, opacity .4s .4s;
}

#assetsHolder
{
	overflow-x:auto;
	/*width:100%;*/
}

#assetsHolder::-webkit-scrollbar { 
    display: none; 
}

#greyOutBox.hidden
{
	background: rgba(0,0,0,0) !important;
	z-index: -1 !important;
}

#greyOutBox
{
	width:100%; 
	height:100%; 
	position:absolute; 
	top:0; 
	left:0; 
	background:rgba(0,0,0,.7);
	z-index:1;
	
	transition: all .4s;
}

.linkIcon
{
	height:2.5rem;
}

.finallyOpen
{
	/*left:20px;*/
	/*top:20px;*/
	z-index:10;
}

.arrowDown
{
	margin-left:1rem;
	margin-right:1rem;
	font-size:3rem;
}

#slideUpCloseArrow
{
	height:1rem;
	width:4rem;
	margin:1.64rem;
	margin-bottom:0rem;
	transition: all .4s .0s;
}

#triangle
{
	position:fixed;
	z-index:10;
	opacity:1;
}

#triangle.hidden
{
	opacity:0;
}

